--- a/src/components/RecipeList.css
+++ b/src/components/RecipeList.css
@@ -43,6 +43,15 @@
     border-radius: 4px;
     margin: 20px auto 0;
   }
+  .delete {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    filter: invert(10%);
+    width: 6%;
+    height: 12%;
+  }
   /* dark mode */
   .recipe-list .card.dark {
     background: #555;
